[workspace]
members = [
    "programs/nft-staking"
]
[profile.release]
overflow-checks = true
# members = [
#     "programs/nft-staking"
# ]


# [workspace]
# members = [
#     "programs/*"
# ]

# [profile.release]
# overflow-checks = true
# lto = "fat"
# codegen-units = 1
# [profile.release.build-override]
# opt-level = 3
# incremental = false
# codegen-units = 1
