[package]
name = "nft-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.28.0"
borsh = "0.9.3"
borsh-derive = "0.9.3"
mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"] }
solana-program = "=1.16.0"

